<resources>
    <string name="app_name">IndividualProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new">Add New</string>
    <string name="search">Search</string>
    <string name="title">Title</string>
    <string name="definition">Definition: Meaning</string>
    <string name="meaning">Meaning</string>
    <string name="synonyms">Synonyms</string>
    <string name="details">Details.......................................................................</string>
    <string name="details_title">Details</string>
    <string name="add_new_word">Add New Word</string>
    <string name="add">Add</string>
    <string name="update_word">Update Word</string>
    <string name="update">Update</string>
    <string name="add_new_btn">Add New</string>
    <string name="ascending">Ascending</string>
    <string name="descending">Descending</string>
    <string name="sort_order">Sort Order</string>
    <string name="date">Date</string>
    <string name="ques">Are you sure?</string>
    <string name="ques_desc">%s?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="you_have_no_new_words_yet">You have no new words yet..</string>
    <string name="you_have_no_completed_words_yet">You have no completed words yet..</string>
    <string name="sort_by">Sort By</string>

</resources>