<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ques"
                android:textStyle="bold"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/tvQues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/ques_desc"
                android:textSize="16sp"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="40dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="8dp"
                    android:text="@string/cancel"
                    android:backgroundTint="@color/red"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    app:cornerRadius="8dp"
                    android:text="@string/confirm"
                    android:backgroundTint="@color/blue"
                    />

            </LinearLayout>
        </LinearLayout>




    </androidx.cardview.widget.CardView>
</layout>
