<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.individualproject.ui.viewModel.ViewWordViewModel" />
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.ViewWordFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Word Details"
            android:textSize="25sp"
            android:paddingVertical="25dp"
            android:layout_marginStart="10dp"/>
        
        <!-- TODO: Update blank fragment layout -->
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center">
          
          <com.google.android.material.button.MaterialButton
              android:id="@+id/btnDone"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="5dp"
              android:backgroundTint="@color/blue"
              android:paddingHorizontal="40dp"
              app:cornerRadius="5dp"
              android:text="Done"
              />

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btnUpdate"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="5dp"
              android:backgroundTint="@color/blue"
              android:paddingHorizontal="40dp"
              app:cornerRadius="5dp"
              android:text="Update"
              />

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btnDelete"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="5dp"
              android:backgroundTint="@color/red"
              android:paddingHorizontal="40dp"
              app:cornerRadius="5dp"
              android:text="Delete"
              />
      </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.title}"
            android:layout_marginVertical="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meaning"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.meaning}"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/synonyms"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.synonyms}"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details_title"
            android:layout_marginTop="20dp"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginStart="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.details}"
            android:textSize="15sp"
            android:layout_marginStart="10dp"/>
       
    </LinearLayout>
</layout>
